--- a/style.css
+++ b/style.css
@@ -7,11 +7,22 @@
     src:url(src/Inter-Regular.ttf)
 }
 
+body {
+    background: rgb(236,236,240);
+    background: linear-gradient(143deg, rgba(236,236,240,1) 0%, rgba(255,255,255,1) 100%);
+}
+
 .contact-form-task-and-map-grid {
     margin: auto;
-    max-width: 85%;
+    max-width: 80%;
     margin-top: 5%;
-    }
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 30px;
+    min-height: 90vh;
+}
+
 .contact-us-voodoo h1{    
     font-family: "Avenir-Bold";
     font-style: normal;
@@ -29,19 +40,11 @@
     line-height: 28px;
     color: #1A1A1A;
 }
-input{
-    width: 299px;
-    height: 64px;
-    border: transparent;
-
-    background: #FFFFFF;
-    box-shadow: 0px 16px 32px rgba(202, 203, 210, 0.25);
-    border-radius: 8px;
+form{
+    display: grid;
+    gap: 15px;
 }
-input::placeholder {
-    width: 148px;
-    height: 28px;
-
+input, textarea, .select::placeholder {
     font-family: "Inter-Regular";
     font-style: normal;
     font-weight: 400;
@@ -49,10 +52,22 @@ input::placeholder {
     line-height: 28px;
     color: #414042;
     opacity: 0.5;
-    padding-left: 20px;
 }
 .input-form-grid{
     margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+    width: 100%;
+}
+input, textarea, .select {
+    border: transparent;
+    outline: none;
+    background: #FFFFFF;
+    box-shadow: 0px 16px 32px rgba(202, 203, 210, 0.25);
+    border-radius: 8px;
+    padding: 20px;
+    box-sizing: border-box;
 }
 .style-for-button{
     display: block;
@@ -68,6 +83,48 @@ input::placeholder {
     font-size: 16px;
     line-height: 19px;
     text-align: center;
-
+    margin-top: 30px;
     color: #FFFFFF;
+}
+
+#textarea-style{
+    outline: none;
+    overflow: auto;
+    resize: none;
+}
+textarea::placeholder{
+    font-family: "Inter-Regular";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #414042;
+    opacity: 0.5;
+}
+
+@media (max-width: 720px) {
+    .contact-form-task-and-map-grid{
+        max-width: 85%;
+        margin: auto;
+        margin-top: 7vh;
+        grid-template-columns: 1fr;
+    }
+    .contact-us-form-grid{
+        display: grid;
+        grid-template-columns: 1fr;
+        /* grid-auto-rows: ; */
+    }
+
+    .input-form-grid {
+        grid-template-columns: 1fr;
+        grid-auto-rows: minmax(50px, max-content);
+    }
+    
+    .send-message{
+        margin-top: 30px;
+        width: 100%;
+    }
+    .style-for-button {
+        display: block;
+    }
 }
